overlays/dev/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-with-quarkus
  labels:
    deployment: code-with-quarkus
    service: code-with-quarkus
spec:
  hostnames:
    - "quarkus.luisfalero.site"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: api-gateway
      sectionName: api
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: code-with-quarkus
          port: 8080
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /q/health
      matches:
        - method: GET
          path:
            type: Exact
            value: /lfalero/q/health

    - backendRefs:
        - group: ""
          kind: Service
          name: code-with-quarkus
          port: 8080
          weight: 1
      matches:
        - method: GET
          path:
            type: Exact
            value: /q/health

        - method: GET
          path:
            type: Exact
            value: /person

        - method: POST
          path:
            type: Exact
            value: /person
        - method: PUT
          path:
            type: RegularExpression
            value: "^/person/[^/]+$"

        - method: DELETE
          path:
            type: RegularExpression
            value: "^/person/[^/]+$"
